--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="app.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -10,6 +11,8 @@
 </head>
 <body>
 
+
+    <button  onclick="setData()">fecth </button>
     <div id="profile-main">
        <div class="flex items-center justify-center mb-5">
            <!-- <form method="GET"> -->
@@ -58,6 +61,6 @@
     </div>
    </div>
 
-
+   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
